# django-mzt

./: .env  .gitignore  .swcrc  README.md  jsconfig.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  spack.config.js
.github/workflows/: ci.yml  lint_pr.yml
scripts/: build.js.sh
timers/static_files/js/: timer.component.mjs  timer.test.mjs
timers/static_files/js/src/: ms.mjs  ms.test.mjs  timer.component.mjs  timer.mjs  timer.simple.mjs
timers/timers/: forms.py  models.py  urls.py
timers/timers/lib/: classes.py  projections.py  timerange.py
timers/timers/management/commands/: cleanruns.py
timers/timers/migrations/: 0001_adds_timer_sequence_models_updated.py  0002_timers_replace_created_by_by_session.py  0003_timers_renamed_sequence_durations.py  0004_timers_renames_runs_in_sequences.py  0005_alter_timersequencepause_timer_sequence_run.py  0006_snapshot_sequence_durations.py  0007_adds_run_ends_at.py
timers/timers/templates/core/: base.html  icons.html
timers/timers/templates/sequences/: create.html  list.html  run.html  run_static.html  sequence_menu.html  single-sequence.html  update.html
timers/timers/templates/sequences/formsets/: form.html
timers/timers/templatetags/: components.py  time.py
timers/timers/tests/: projections_test.py  timerange_test.py  timersequencerun_test.py
timers/timers/views/: sequences.py
timers/website/: settings.py  urls.py
